--- a/package.json
+++ b/package.json
@@ -1,26 +1,40 @@
 {
-  "name": "atomicswap",
-  "version": "0.0.1",
-  "description": "RSquad",
-  "main": "index.ts",
-  "scripts": {
-    "compile": "node ./compile.js",
-    "scripts:deploy": "env ts-node -r dotenv/config ./scripts/deploy.ts",
-    "compile:scripts:deploy": "npm run compile && env ts-node -r dotenv/config ./scripts/deploy.ts",
-    "release": "standard-version",
-    "release:patch": "npm run release -- --release-as patch",
-    "release:minor": "npm run release -- --release-as minor",
-    "release:major": "npm run release -- --release-as major"
-  },
-  "devDependencies": {},
-  "dependencies": {
-    "standard-version": "^9.3.1",
-    "@tonclient/core": "^1.5.0",
-    "@tonclient/lib-node": "^1.5.0",
-    "@rsquad/ton-utils": "^1.3.1",
-    "@types/node": "^14.14.16",
-    "dotenv": "^8.2.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
-  }
+	"name": "atomicswap",
+	"version": "1.0.0",
+	"private": true,
+	"scripts": {
+		"npm install": "npm install",
+		"web": "webpack-dev-server -d --config webpack.config.js --progress --colors --host 127.0.0.1",
+		"web:bundle": "webpack -p --config webpack.config.js --progress --colors --display-error-details",
+		"dev": "webpack serve"
+	},
+	"dependencies": {
+		"@tonclient/core": "^1.5.3",
+		"@tonclient/lib-web": "^1.5.3",
+		"@angular/common": "~13.0.0",
+		"@angular/compiler": "~13.0.0",
+		"@angular/core": "~13.0.0",
+		"@angular/forms": "~13.0.0",
+		"@angular/platform-browser": "~13.0.0",
+		"@angular/platform-browser-dynamic": "~13.0.0",
+		"@angular/router": "~13.0.0",
+		"rxjs": "~7.4.0",
+		"zone.js": "~0.11.4"
+	},
+	"devDependencies": {
+		"@types/node": "~15.0.3",
+		"angular2-template-loader": "~0.6.2",
+		"css-loader": "~6.5.0",
+		"file-loader": "~6.2.0",
+		"html-loader": "~3.0.0",
+		"html-webpack-plugin": "~5.5.0",
+		"mini-css-extract-plugin": "~2.4.3",
+		"raw-loader": "~4.0.2",
+		"ts-loader": "~9.2.6",
+		"typescript": "~4.4.4",
+		"webpack": "~5.61.0",
+		"webpack-cli": "~4.9.1",
+		"webpack-dev-server": "~4.4.0"
+	},
+	"main": "index.js"
 }
